fix compilation on Java 13+ (#641)